# Portfolio

./: README.md  pen-testing report.docx
Audited Smart Contracts/: QuantAMM(Codehawks).md  The Standard(Codehawks).md
Equinox/backend/: equinox.json  package-lock.json  package.json
Equinox/backend/config/anchor/: equinox_ches.json
Equinox/backend/src/: server.js
Equinox/frontend/: styles.css
Equinox/src/: Cargo.toml  build.sh  game.rs
Web3 Dev/: X Auditor.sol  X auditor.sol
Web3 Dev/StakeHo Finance/: README.md  StakeHo.sol
Web3 Dev/Yami/: README.md  YToken.sol  YamiLendingPool.sol
memecoin-trading/: README.md
my-py-scripts/: Gaugor.py  GeogeoMe.py  Omega 3.py  Omega-3.py  README.md  Wi-PE.py
shilling-campaigns/: README.md
